--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     // Links / Meta
     const GITHUB_REPO_URL = 'https://github.com/Happydao/Nummus.burn';
-    const BURN_ADDRESS    = '—'; // inserisci qui il burn address
+    const BURN_ADDRESS    = '5G62fW1BuK6k9B6sGwvTBtoKRPseshj9SSYPzudSPUYE'; // inserisci qui il burn address
     const BURN_SOLSCAN_URL = (BURN_ADDRESS && BURN_ADDRESS.length > 20) ? 'https://solscan.io/account/' + BURN_ADDRESS : null;
 
     // Colors
